--- a/requirements.minimal.txt
+++ b/requirements.minimal.txt
@@ -7,6 +7,7 @@ numpy==1.24.3
 pandas==2.0.3
 huggingface_hub==0.16.4
 sentence-transformers==2.2.2
+qdrant-client==1.7.3
 requests==2.31.0
 aiohttp==3.9.0
 python-multipart==0.0.6
